# project-axiom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
include/axiom/: ast.h  codegen.h  lexer.h  parser.h  token.h
include/axiom/support/: error.h  source_location.h
src/: main.cpp
src/codegen/: CMakeLists.txt  codegen.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/support/: CMakeLists.txt  error.cpp  source_location.cpp
