CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(ProjectAxiom VERSION 0.1.0 LANGUAGES C CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

INCLUDE(CompilerWarnings)

FIND_PACKAGE(LLVM REQUIRED CONFIG COMPONENTS 
    Core 
    Analysis 
    ExecutionEngine 
    OrcJIT 
    Support 
    native
)

MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")

OPTION(BUILD_TESTING "Build tests" ON)

ADD_EXECUTABLE(axiom src/main.cpp)

TARGET_COMPILE_DEFINITIONS(axiom PRIVATE ${LLVM_DEFINITIONS})

TARGET_INCLUDE_DIRECTORIES(axiom PRIVATE ${LLVM_INCLUDE_DIRS})

LLVM_MAP_COMPONENTS_TO_LIBNAMES(llvm_libs Core Analysis ExecutionEngine OrcJIT Support native)

TARGET_LINK_LIBRARIES(axiom PRIVATE ${llvm_libs})