CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(ProjectAxiom VERSION 0.1.0 LANGUAGES C CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

INCLUDE(CompilerWarnings)

FIND_PACKAGE(LLVM REQUIRED CONFIG COMPONENTS 
    Core 
    Analysis 
    ExecutionEngine 
    OrcJIT 
    Support 
    native
)

MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")

OPTION(BUILD_TESTING "Build tests" ON)

ADD_SUBDIRECTORY(src/support)
ADD_SUBDIRECTORY(src/lexer)
ADD_SUBDIRECTORY(src/parser)
ADD_SUBDIRECTORY(src/codegen)

ADD_EXECUTABLE(axiom src/main.cpp)

TARGET_COMPILE_DEFINITIONS(axiom PRIVATE ${LLVM_DEFINITIONS})

TARGET_INCLUDE_DIRECTORIES(axiom PRIVATE ${LLVM_INCLUDE_DIRS})

LLVM_MAP_COMPONENTS_TO_LIBNAMES(llvm_libs Core Analysis ExecutionEngine OrcJIT Support native)

SET_PROJECT_WARNINGS(axiom)

TARGET_LINK_LIBRARIES(axiom PRIVATE
    axiom_codegen
    axiom_parser
    axiom_lexer
    axiom_support
    ${llvm_libs}
)